--- a/packages/@lucky-demo/cli-shared-utils/package.json
+++ b/packages/@lucky-demo/cli-shared-utils/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@lucky-demo/cli-shared-utils",
+  "name": "@lemhion1908/cli-shared-utils",
   "version": "0.1.0",
   "description": "> TODO: description",
-  "author": "zaiping.lu <zaiping.lu@luckincoffee.com>",
+  "author": "zaiping.lu <lemhion1908@gmail.com>",
   "homepage": "",
   "license": "ISC",
   "main": "lib/index.js",
