--- a/packages/@lucky-demo/cli/package.json
+++ b/packages/@lucky-demo/cli/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.1",
   "description": "> TODO: description",
   "author": "zaiping.lu <lemhion1908@gmail.com>",
-  "homepage": "",
+  "repository": "github:luzaiping/lerna-demo",
+  "bugs": "https://github.com/luzaiping/lerna-demo/issues",
+  "homepage": "https://github.com/luzaiping/lerna-demo",
   "license": "ISC",
   "main": "lib/index.js",
   "directories": {
