--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,10 @@
   "packages": [
     "packages/@lemhion1908/*"
   ],
+  "command": {
+    "bootstrap": {
+      "hoist": true
+    }
+  },
   "version": "0.1.3"
 }
